Edit the framework to work with newer openjdk